--- a/css/desprenoi.css
+++ b/css/desprenoi.css
@@ -27,9 +27,8 @@ a {
 
 @media only screen and (max-width: 1000px) {
     iframe {
-        width: 0;
-        height: 0;
-        border: none;
+        width: 50%;
+        height: 20pc;
     }
 
     #continut{
