Added captcha for contact form & separated admin element & updated register form

--- a/css/desprenoi.css
+++ b/css/desprenoi.css
@@ -25,6 +25,11 @@ a {
     font-size: 90%;
 }
 
+.refresh-captcha:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 @media only screen and (max-width: 1000px) {
     iframe {
         width: 50%;
