--- a/css/bibliotecafizica.css
+++ b/css/bibliotecafizica.css
@@ -42,6 +42,7 @@
 
 .carti {
     width: 10pc;
+    height: 25vh;
 }
 
 td {
@@ -69,4 +70,36 @@ table {
     background-color: whitesmoke;
     height: 3pc;
     font-size: 1pc;
+}
+
+#searchbooks {
+    background-image: url('../pics/searchicon.png');
+    background-position: 5% center;
+    background-size: 1.5vw 2.5vh;
+    background-repeat: no-repeat;
+    width: 10vw;
+    height: 3vh;
+    font-size: large;
+    padding: .5em;
+    padding-left: 3vw;
+    padding-right: 0;
+    margin-bottom: 5pc;
+    margin-right: 4vw;
+    margin-left: 5pc;
+}
+
+.paragraphs {
+    margin: 0;
+    margin-top: -1pc;
+}
+
+#search {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 6pc;
+}
+
+#sortselect {
+    margin-left: 2pc;
+    margin-right: 2pc;
 }
