--- a/css/contul_meu_admin.css
+++ b/css/contul_meu_admin.css
@@ -6,26 +6,24 @@
   /* border: solid red; */
 }
 
-#insert_form {
+.admin_form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-
-  /* border: solid pink; */
 }
 
-#table_select {
-  width: auto;
+.admin_select {
+  width: 15pc;
   padding: .5pc;
   text-align: center;
   border: none;
-
 }
 
-#submit_insert {
+.admin_submit {
   margin-left: 0;
   margin-top: 2pc;
   border: inset;
+  width: 5vw;
 }
